# Firmware

./: Makefile
SDcard/etc/: extras.txt
SDcard/etc/mixers/: IO_pass.main.mix
cmake/configs/: nuttx_auav-x21_default.cmake  nuttx_px4fmu-v2_default.cmake  posix_sitl_default.cmake
msg/: CMakeLists.txt  pid_status.msg
msg/morus/: arm_control_unit_power_status.msg  attitude_controller_reference.msg  attitude_controller_status.msg  controllers_mode.msg  controllers_reference.msg  controllers_switch.msg  flags_v_values_dont_change_timeout.msg  gas_motor_ignition_reference.msg  gas_motor_setpoint.msg  gas_motor_setpoint_array.msg  gas_motor_status.msg  moving_mass_setpoint.msg  moving_mass_setpoint_array.msg  moving_mass_status.msg  position_controller_setpoint.msg  position_controller_status.msg
src/firmware/nuttx/: CMakeLists.txt
src/morus_lib/AttitudeControlSS/: AttitudeControlSS.cpp  AttitudeControlSS.h  AttitudeFeedForward.cpp  AttitudeFeedForward.h  CMakeLists.txt
src/morus_lib/serial_lib/: CMakeLists.txt  README.txt  serial_lib.cpp  serial_lib.h
src/morus_modules/morus_direct_control/: CMakeLists.txt  DirectControl.cpp  DirectControl.h  morus_direct_control_main.cpp
src/morus_modules/morus_ss_control/: CMakeLists.txt  SSControl.cpp  SSControl.h  morus_ss_control_main.cpp
src/morus_modules/morus_stepperController_commander/: CMakeLists.txt  StepperControllerCommander.cpp  StepperControllerCommander.h  StepperControllerParams.cpp  StepperControllerParams.h  morus_stepperController_commander_main.cpp  stepper_controller_params.c  stepper_controller_params.h
